fix footer spacing

--- a/app/assets/stylesheets/api/footer.scss
+++ b/app/assets/stylesheets/api/footer.scss
@@ -12,6 +12,8 @@
     padding-top: 2.8125rem;
     height: 565px;
     width: 1680px;
+    border-top: .0625rem solid #e0e0e0;
+    
 }
 
 .footer-wrapper-top-section  {
