--- a/app/assets/stylesheets/api/splash_page.scss
+++ b/app/assets/stylesheets/api/splash_page.scss
@@ -166,8 +166,8 @@
     display: flex;
     justify-content: center;  
     top:0%;
-
-    margin-left: 110px;
+    margin-bottom: 2.8125rem;
+    margin-left: 6.875rem;
     z-index: 0;
     width: 73%;
     height: 37.5rem;
